--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,6 @@ plugins =
     
 [mypy.plugins.django-stubs]
 django_settings_module = "dandi.settings"
+
+[mypy-celery.*]
+ignore_missing_imports = True
