--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,15 @@ venv.bak/
 
 # pycharm
 **/.idea
+
+node_modules/
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
