Exclude possible present venvs, build etc dirs from linting

--- a/tox.ini
+++ b/tox.ini
@@ -80,6 +80,9 @@ ignore =
     # Missing docstring in *
     D10,
 extend-exclude =
+    build,
+    dist,
+    venvs,
     versioneer.py,
     _version.py,
 
