--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "migrate": "node src/migrate.js"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.7",
@@ -20,6 +21,7 @@
     "core-js": "^3.12.1",
     "filesize": "^6.3.0",
     "js-yaml": "^4.1.0",
+    "json-schema-to-typescript": "^10.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
