--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     flake8-quotes
     pep8-naming
 commands =
-    flake8 {posargs:.}
+    flake8 --config=tox.ini {posargs:.}
 
 [testenv:type]
 skipsdist = true
