--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-gtag": "^1.16.1",
     "vue-json-pretty": "^1.8.0",
     "vue-router": "^3.5.1",
+    "vue-social-sharing": "^3.0.8",
     "vuetify": "~2.3.6",
     "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0"
