--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
 skipsdist = true
 skip_install = true
 deps =
-    flake8<4 #  https://github.com/gforcada/flake8-isort/issues/103
+    flake8
     flake8-black
     flake8-bugbear
     flake8-docstrings
