Use env vars instead of hardcoding URLs

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,8 @@ passenv =
     DJANGO_MINIO_STORAGE_ENDPOINT
     DJANGO_MINIO_STORAGE_SECRET_KEY
     DJANGO_DANDI_SCHEMA_VERSION
+    DJANGO_DANDI_WEB_APP_URL
+    DJANGO_DANDI_API_URL
 extras =
     dev
     test
@@ -62,6 +64,8 @@ passenv =
     DJANGO_MINIO_STORAGE_ENDPOINT
     DJANGO_MINIO_STORAGE_SECRET_KEY
     DJANGO_DANDI_SCHEMA_VERSION
+    DJANGO_DANDI_WEB_APP_URL
+    DJANGO_DANDI_API_URL
 extras =
     dev
 commands =
