--- a/dev/.env.docker-compose
+++ b/dev/.env.docker-compose
@@ -7,3 +7,5 @@ DJANGO_MINIO_STORAGE_SECRET_KEY=minioSecretKey
 DJANGO_STORAGE_BUCKET_NAME=django-storage
 DJANGO_MINIO_STORAGE_MEDIA_URL=http://localhost:9000/django-storage
 DJANGO_DANDI_DANDISETS_BUCKET_NAME=dandi-dandisets
+DJANGO_DANDI_WEB_APP_URL=http://localhost:8085
+DJANGO_DANDI_API_URL=http://localhost:8000
