Add embargo bucket settings

--- a/dev/.env.docker-compose-native
+++ b/dev/.env.docker-compose-native
@@ -6,5 +6,6 @@ DJANGO_MINIO_STORAGE_ACCESS_KEY=minioAccessKey
 DJANGO_MINIO_STORAGE_SECRET_KEY=minioSecretKey
 DJANGO_STORAGE_BUCKET_NAME=django-storage
 DJANGO_DANDI_DANDISETS_BUCKET_NAME=dandi-dandisets
+DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME=dandi-embargo-dandisets
 DJANGO_DANDI_WEB_APP_URL=http://localhost:8085
 DJANGO_DANDI_API_URL=http://localhost:8000
