Transfer GitHub Action jobs to top level

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,9 +1,11 @@
-name: ci
+name: CI for backend
 on:
   pull_request:
+    paths-ignore: "web/**"
   push:
     branches:
       - master
+    paths-ignore: "web/**"
   schedule:
     - cron: "0 0 * * *"
 jobs:
