--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -63,6 +63,7 @@ jobs:
         with:
           node-version: '14.x'
           cache: 'yarn'
+          cache-dependency-path: web/yarn.lock
 
       - name: Install web app
         if: steps.yarn-cache.outputs.cache-hit != 'true'
