--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Install dandi-api dependencies
         if: steps.pip-cache.outputs.cache-hit != 'true'
-        run: pip install --upgrade --upgrade-strategy eager .[dev]
+        run: pip install --upgrade --upgrade-strategy eager -e .[dev]
         working-directory: ..
 
       - name: Apply migrations to API server
