--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "migrate": "node src/migrate.js"
+    "migrate": "ts-node src/migrate.ts"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.7",
@@ -54,6 +54,7 @@
     "moment-locales-webpack-plugin": "^1.2.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.2.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.2.4",
     "vue-cli-plugin-vuetify": "^2.4.0",
     "vue-template-compiler": "^2.6.11",
