--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -3,6 +3,7 @@ publish = "dist"
 command = "yarn run build"
 
   [build.environment]
+  NODE_VERSION = "16" # Netlify defaults to node.js 10, but @types/node requires a more recent version
   VUE_APP_OAUTH_API_ROOT = "https://api.dandiarchive.org/oauth/"
   VUE_APP_OAUTH_CLIENT_ID = "Dk0zosgt1GAAKfN8LT4STJmLJXwMDPbYWYzfNtAl"
   VUE_APP_DANDI_API_ROOT = "https://api.dandiarchive.org/api/"
