--- a/.github/workflows/cli-integration.yml
+++ b/.github/workflows/cli-integration.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
+    paths-ignore: "web/**"
   pull_request:
+    paths-ignore: "web/**"
 
 jobs:
   build-image:
