--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -54,7 +54,7 @@ jobs:
       CLIENT_URL: http://localhost:8085
 
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
       - uses: actions/setup-node@v2
         with:
@@ -79,7 +79,7 @@ jobs:
       - name: Install latest version of pip
         run: pip install --upgrade pip
 
-      - uses: actions/cache@master
+      - uses: actions/cache@v2
         id: pip-cache
         with:
           path: ${{ env.pythonLocation}}/lib/python3.8/site-packages/*
