Fix `paths-ignore` directive `paths-ignore` is supposed to be an array, not string

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,11 +1,13 @@
 name: CI for backend
 on:
   pull_request:
-    paths-ignore: "web/**"
+    paths-ignore:
+      - "web/**"
   push:
     branches:
       - master
-    paths-ignore: "web/**"
+    paths-ignore:
+      - "web/**"
   schedule:
     - cron: "0 0 * * *"
 jobs:
