Specify NETLIFY_BASE
This will enable the build process to actually find the materials it
needs to do the build.

--- a/.github/workflows/frontend-staging-deploy.yml
+++ b/.github/workflows/frontend-staging-deploy.yml
@@ -18,3 +18,4 @@ jobs:
         env:
           NETLIFY_SITE_ID: ${{secrets.NETLIFY_STAGING_SITE_ID}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NETLIFY_BASE: web
