--- a/web/package.json
+++ b/web/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vuetify": "^1.0.0-beta.8",
     "json-schema-to-typescript": "^10.1.5",
     "moment-locales-webpack-plugin": "^1.2.0",
+    "netlify-cli": "^8.13.2",
     "sass": "^1.32.12",
     "sass-loader": "^10.2.0",
     "ts-node": "^10.4.0",
