--- a/.github/workflows/frontend-staging-deploy.yml
+++ b/.github/workflows/frontend-staging-deploy.yml
@@ -1,21 +1,36 @@
-name: Trigger staging deploy of frontend application on push to master
+name: Deploy frontend to staging
 
 on:
   push:
-    branches:
-      - master
-    paths:
-      - "web/**"
+    #branches:
+      #- master
+    #paths:
+      #- "web/**"
 
 jobs:
-  deploy:
+  deploy-frontend-staging:
+    defaults:
+      run:
+        working-directory: web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: Deploy frontend to staging
-        uses: netlify/actions/build@master
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+          cache: 'yarn'
+          cache-dependency-path: web/yarn.lock
+
+      - name: Install Yarn dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile --prefer-offline
+
+      - name: Build the frontend
+        run: yarn run build
+
+      - name: Deploy to staging
+        run: npx netlify deploy --prod --dir=dist
         env:
+          NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
           NETLIFY_SITE_ID: ${{secrets.NETLIFY_STAGING_SITE_ID}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          NETLIFY_BASE: web
