--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "lint:templates": "vue-type-check --workspace . --srcDir src/",
     "migrate": "ts-node src/migrate.ts"
   },
   "dependencies": {
@@ -57,6 +58,7 @@
     "typescript": "^4.2.4",
     "vue-cli-plugin-vuetify": "^2.4.0",
     "vue-template-compiler": "^2.6.11",
+    "vue-type-check": "^1.1.0",
     "vuetify-loader": "^1.7.2"
   },
   "postcss": {
