Update tox `filterwarnings` See https://github.com/girder/cookiecutter-girder-4/commit/719f0dca89930a3d63fda7f3318551e5fc774a51

--- a/tox.ini
+++ b/tox.ini
@@ -95,6 +95,7 @@ DJANGO_SETTINGS_MODULE = dandiapi.settings
 DJANGO_CONFIGURATION = TestingConfiguration
 addopts = --strict-markers --showlocals --verbose
 filterwarnings =
-    ignore:.*default_app_config*.:django.utils.deprecation.RemovedInDjango41Warning
-    ignore::DeprecationWarning:minio
-    ignore::DeprecationWarning:configurations
+    # https://github.com/jazzband/django-configurations/issues/190
+    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:configurations
+    # https://github.com/celery/kombu/issues/1339
+    ignore:SelectableGroups dict interface is deprecated:DeprecationWarning:kombu
