--- a/web/package.json
+++ b/web/package.json
@@ -6,31 +6,36 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "migrate": "ts-node src/migrate.ts"
+    "migrate": "node src/migrate.js"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.7",
+    "@girder/components": "~2.2.5",
     "@girder/oauth-client": "^0.7.7",
-    "@koumoul/vjsf": "^2.5.2",
+    "@koumoul/vjsf": "^2.3.1",
     "@sentry/browser": "^6.3.6",
     "@sentry/integrations": "^6.3.6",
     "@vue/composition-api": "^1.0.0-rc.8",
     "ajv": "^8.3.0",
     "axios": "^0.21.2",
     "core-js": "^3.12.1",
-    "direct-vuex": "^0.12.1",
     "filesize": "^6.3.0",
     "js-yaml": "^4.1.0",
+    "json-schema-to-typescript": "^10.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-cookie-law": "^1.13.3",
     "vue-gtag": "^1.16.1",
+    "vue-json-pretty": "^1.8.0",
     "vue-router": "^3.5.1",
     "vue-social-sharing": "^3.0.8",
     "vuetify": "~2.3.6",
     "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0"
+  },
+  "resolutions": {
+    "@girder/components/vuetify": "~2.3.6"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.1",
@@ -49,11 +54,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.9.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.8",
-    "json-schema-to-typescript": "^10.1.5",
     "moment-locales-webpack-plugin": "^1.2.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.2.0",
-    "ts-node": "^10.4.0",
     "typescript": "^4.2.4",
     "vue-cli-plugin-vuetify": "^2.4.0",
     "vue-template-compiler": "^2.6.11",
