Set up `girder-pytest-pyppeteer`

--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,48 @@ extras =
 commands =
     pytest {posargs}
 
+[testenv:test-pyppeteer]
+setenv =
+    # See https://docs.djangoproject.com/en/4.0/topics/async/#envvar-DJANGO_ALLOW_ASYNC_UNSAFE
+    DJANGO_ALLOW_ASYNC_UNSAFE = true
+    # This is necessary for the Django dev server to behave correctly
+    DJANGO_CONFIGURATION = DevelopmentConfiguration
+    PYPPETEER_TEST_CLIENT_COMMAND=yarn run serve
+    PYPPETEER_TEST_CLIENT_DIR=web
+    # nodeversion >=17 deprecated some OpenSSL algorithms which a dependency is still using
+    # https://nodejs.org/en/blog/release/v17.0.0/
+    PYPPETEER_NODE_OPTIONS=--openssl-legacy-provider
+    # This differs from the cookiecutter default PYPPETEER_VUE_APP_API_ROOT, so we need to set it manually
+    # See https://girder-pytest-pyppeteer.readthedocs.io/en/latest/pytest_plugin/#webpack_server
+    PYPPETEER_VUE_APP_DANDI_API_ROOT=\{live_server\}/api
+    # I had to set this to get the browser window to show up in Ubuntu 20.04
+    DISPLAY=:1
+passenv =
+    DJANGO_CELERY_BROKER_URL
+    DJANGO_DATABASE_URL
+    DJANGO_MINIO_STORAGE_ACCESS_KEY
+    DJANGO_MINIO_STORAGE_ENDPOINT
+    DJANGO_MINIO_STORAGE_SECRET_KEY
+    DJANGO_STORAGE_BUCKET_NAME
+    DJANGO_DANDI_DANDISETS_BUCKET_NAME
+    DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME
+    DJANGO_DANDI_SCHEMA_VERSION
+    DJANGO_DANDI_WEB_APP_URL
+    DJANGO_DANDI_API_URL
+    PYPPETEER_BROWSER_HEADLESS
+deps =
+    factory-boy
+    girder-pytest-pyppeteer[pyppeteer]
+    pytest
+    pytest-django
+    pytest-factoryboy
+    pytest-mock
+extras =
+    dev
+    test
+commands =
+    pytest -m pyppeteer {posargs}
+
 [testenv:check-migrations]
 setenv =
     DJANGO_CONFIGURATION = TestingConfiguration
@@ -99,3 +141,4 @@ filterwarnings =
     ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:configurations
     # https://github.com/celery/kombu/issues/1339
     ignore:SelectableGroups dict interface is deprecated:DeprecationWarning:kombu
+asyncio_mode = auto
