--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,4 +1,4 @@
-name: CI for front end
+name: CI for frontend
 on:
   pull_request:
     paths:
@@ -12,6 +12,70 @@ on:
     - cron: "0 0 * * *"
 jobs:
   test:
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: django
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+      rabbitmq:
+        image: rabbitmq:management
+        ports:
+          - 5672:5672
+      minio:
+        # This image does not require any command arguments (which GitHub Actions don't support)
+        image: bitnami/minio:2022.3.3
+        env:
+          MINIO_ACCESS_KEY: minioAccessKey
+          MINIO_SECRET_KEY: minioSecretKey
+        ports:
+          - 9000:9000
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14.x'
+          cache: 'yarn'
+          cache-dependency-path: web/yarn.lock
+
+      - name: Install web app
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile --prefer-offline
+        working-directory: web
+
+      - name: Lint web app
+        run: |
+          yarn run lint --no-fix --max-warnings=0
+          yarn run lint:templates
+        working-directory: web
+
+      - name: Run E2E tests
+        uses: docker://ghcr.io/girder/pytest-pyppeteer:v0.0.10
+        with:
+          install_directory: web
+          install_command: yarn install
+          test_directory: .
+          test_command: tox -e test-pyppeteer
+        env:
+          DJANGO_DATABASE_URL: postgres://postgres:postgres@postgres:5432/django
+          DJANGO_CELERY_BROKER_URL: amqp://rabbitmq:5672/
+          DJANGO_MINIO_STORAGE_ENDPOINT: minio:9000
+          DJANGO_MINIO_STORAGE_ACCESS_KEY: minioAccessKey
+          DJANGO_MINIO_STORAGE_SECRET_KEY: minioSecretKey
+          DJANGO_STORAGE_BUCKET_NAME: django-storage
+          DJANGO_MINIO_STORAGE_MEDIA_URL: http://localhost:9000/django-storage
+          DJANGO_DANDI_DANDISETS_BUCKET_NAME: dandi-dandisets
+          DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME: dandi-embargo-dandisets
+          DJANGO_DANDI_WEB_APP_URL: http://localhost:8085
+          DJANGO_DANDI_API_URL: http://localhost:8000
+
+  # TODO: Remove this job when the rest of the puppeteer-based tests are ported to pyppeteer
+  test-e2e-old:
     runs-on: ubuntu-latest
     services:
       postgres:
