Add `--no-fix` to lint step in CI
Otherwise, `yarn lint` just autofixes the errors and returns a status code of 0.

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: yarn install
 
       - name: Lint Vue app
-        run: yarn run lint
+        run: yarn run lint --no-fix
 
       - name: Type-check Vue templates
         run: yarn run lint:templates
