--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -73,6 +73,7 @@ jobs:
           DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME: dandi-embargo-dandisets
           DJANGO_DANDI_WEB_APP_URL: http://localhost:8085
           DJANGO_DANDI_API_URL: http://localhost:8000
+          DJANGO_DANDI_JUPYTERHUB_URL: https://hub.dandiarchive.org/
 
   # TODO: Remove this job when the rest of the puppeteer-based tests are ported to pyppeteer
   test-e2e-jest-puppeteer:
@@ -108,6 +109,7 @@ jobs:
       DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME: dandi-embargo-dandisets
       DJANGO_DANDI_WEB_APP_URL: http://localhost:8085
       DJANGO_DANDI_API_URL: http://localhost:8000
+      DJANGO_DANDI_JUPYTERHUB_URL: https://hub.dandiarchive.org/
 
       # Web client env vars
       VUE_APP_DANDI_API_ROOT: http://localhost:8000/api/
