--- a/tox.ini
+++ b/tox.ini
@@ -48,6 +48,7 @@ passenv =
     DJANGO_DANDI_SCHEMA_VERSION
     DJANGO_DANDI_WEB_APP_URL
     DJANGO_DANDI_API_URL
+    DJANGO_DANDI_JUPYTERHUB_URL
 extras =
     dev
     test
@@ -82,6 +83,7 @@ passenv =
     DJANGO_DANDI_SCHEMA_VERSION
     DJANGO_DANDI_WEB_APP_URL
     DJANGO_DANDI_API_URL
+    DJANGO_DANDI_JUPYTERHUB_URL
     PYPPETEER_BROWSER_HEADLESS
 deps =
     factory-boy
@@ -108,6 +110,7 @@ passenv =
     DJANGO_DANDI_SCHEMA_VERSION
     DJANGO_DANDI_WEB_APP_URL
     DJANGO_DANDI_API_URL
+    DJANGO_DANDI_JUPYTERHUB_URL
 extras =
     dev
 commands =
