--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -12,7 +12,7 @@ VUE_APP_SENTRY_DSN = "https://425b9a012300493d867e97785fae7b88@o308436.ingest.se
 VUE_APP_SENTRY_ENVIRONMENT = "staging"
 
 # Production
-[context.release-branch-ci.environment]
+[context.release.environment]
 NODE_VERSION = "16" # Netlify defaults to node.js 10, but @types/node requires a more recent version
 VUE_APP_OAUTH_API_ROOT = "https://api.dandiarchive.org/oauth/"
 VUE_APP_OAUTH_CLIENT_ID = "Dk0zosgt1GAAKfN8LT4STJmLJXwMDPbYWYzfNtAl"
