--- a/.github/workflows/update-release-branch.yml
+++ b/.github/workflows/update-release-branch.yml
@@ -13,9 +13,15 @@ jobs:
           fetch-depth: 0 # fetch history for all branches and tags
           token: ${{ secrets.GH_TOKEN }} # use PAT with permissions to push to master
           ref: release
-      
+
       - name: Reset release branch
         run: |
           git reset --hard ${{ github.ref }}
           git push --force origin release
 
+      - name: Deploy to Heroku
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "dandi-api"
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
