--- a/.github/workflows/update-release-branch.yml
+++ b/.github/workflows/update-release-branch.yml
@@ -28,10 +28,11 @@ jobs:
           token: ${{ secrets.GH_TOKEN }} # use PAT with permissions to push to master
           ref: release
 
+
       - name: Get latest git tag
         run: |
           git fetch --prune --unshallow
-          echo "API_VERSION=$(git describe --abbrev=0)" >> $GITHUB_ENV
+          echo "API_VERSION=$(git describe)" >> $GITHUB_ENV
 
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
