--- a/dev/.env.docker-compose
+++ b/dev/.env.docker-compose
@@ -11,3 +11,4 @@ DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME=dandi-embargo-dandisets
 DJANGO_DANDI_WEB_APP_URL=http://localhost:8085
 DJANGO_DANDI_API_URL=http://localhost:8000
 DJANGO_DANDI_JUPYTERHUB_URL=https://hub.dandiarchive.org/
+DANDI_ALLOW_LOCALHOST_URLS=1
