--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ passenv =
     DJANGO_DANDI_WEB_APP_URL
     DJANGO_DANDI_API_URL
     DJANGO_DANDI_JUPYTERHUB_URL
+    DANDI_ALLOW_LOCALHOST_URLS
 extras =
     dev
     test
@@ -84,6 +85,7 @@ passenv =
     DJANGO_DANDI_WEB_APP_URL
     DJANGO_DANDI_API_URL
     DJANGO_DANDI_JUPYTERHUB_URL
+    DANDI_ALLOW_LOCALHOST_URLS
     PYPPETEER_BROWSER_HEADLESS
 deps =
     factory-boy
