--- a/.github/workflows/update-release-branch.yml
+++ b/.github/workflows/update-release-branch.yml
@@ -34,9 +34,7 @@ jobs:
         run: heroku plugins:install heroku-builds
 
       - name: Build app into tarball
-        run: |
-          git fetch --prune --unshallow --tags
-          python setup.py sdist --formats=gztar
+        run: python setup.py sdist --formats=gztar
 
       - name: Create Heroku Build
         run: heroku builds:create -a dandi-api --source-tar=dist/$(python setup.py --fullname).tar.gz
