BF: provide custom commit message without token to skip the beat
this is a suspect for why we lacked deployment releases and possibly for
some commits off in the staging as well

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,4 +25,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          ~/auto shipit
+          ~/auto shipit --message="auto shipit - CHANGELOG.md etc"
