--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ extras =
     dev
     test
 commands =
-    pytest {posargs}
+    pytest -m "not pyppeteer" {posargs}
 
 [testenv:test-pyppeteer]
 setenv =
@@ -89,7 +89,6 @@ passenv =
     PYPPETEER_BROWSER_HEADLESS
 deps =
     factory-boy
-    girder-pytest-pyppeteer[pyppeteer]
     pytest
     pytest-django
     pytest-factoryboy
@@ -98,7 +97,7 @@ extras =
     dev
     test
 commands =
-    pytest -m pyppeteer {posargs}
+    pytest -m pyppeteer --headless --executable-path chromium {posargs}
 
 [testenv:check-migrations]
 setenv =
