--- a/tox.ini
+++ b/tox.ini
@@ -130,6 +130,8 @@ ignore =
     W503,
     # Missing docstring in *
     D10,
+    # variables should be lowercased
+    N806,
 extend-exclude =
     build,
     dist,
