--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
 skipsdist = true
 skip_install = true
 deps =
-    flake8
+    flake8 < 5
     flake8-black >= 0.2.4
     flake8-bugbear
     flake8-docstrings
