Configure `mypy` to run with `tox`

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     lint,
+    type,
     test,
     check-migrations,
 
@@ -19,14 +20,12 @@ commands =
     flake8 --config=tox.ini {posargs:.}
 
 [testenv:type]
-skipsdist = true
-skip_install = true
 deps =
     mypy
-    django-stubs
-    djangorestframework-stubs
+extras =
+    dev
 commands =
-    mypy {posargs:.}
+    mypy {posargs:dandiapi/}
 
 [testenv:format]
 skipsdist = true
