--- a/web/package.json
+++ b/web/package.json
@@ -51,7 +51,7 @@
     "eslint-plugin-vuetify": "^1.1.0",
     "json-schema-to-typescript": "^10.1.5",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "sass": "^1.32.12",
+    "sass": "~1.32.12",
     "sass-loader": "^10.2.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.8.2",
