--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lint:templates": "vue-type-check --workspace . --srcDir src/",
+    "type": "vue-tsc --noEmit",
     "migrate": "ts-node src/migrate.ts"
   },
   "dependencies": {
@@ -56,7 +56,7 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.8.2",
     "vue-cli-plugin-vuetify": "^2.4.0",
-    "vue-type-check": "^1.1.0",
+    "vue-tsc": "^0.40.5",
     "vuetify-loader": "^1.9.2"
   },
   "postcss": {
