--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,9 @@
     "@apidevtools/json-schema-ref-parser": "^9.0.7",
     "@girder/oauth-client": "^0.7.7",
     "@koumoul/vjsf": "^2.5.2",
-    "@sentry/integrations": "^7.12.1",
-    "@sentry/vue": "^7.12.1",
+    "@sentry/integrations": "^7.13.0",
+    "@sentry/tracing": "^7.13.0",
+    "@sentry/vue": "^7.13.0",
     "ajv": "^8.3.0",
     "axios": "^0.21.2",
     "core-js": "^3.12.1",
