Add dandi exception classes

--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,8 @@ ignore =
     D10,
     # variables should be lowercased
     N806,
+    # exceptions need Error in their name
+    N818
 extend-exclude =
     build,
     dist,
