--- a/.github/workflows/cli-integration.yml
+++ b/.github/workflows/cli-integration.yml
@@ -47,6 +47,7 @@ jobs:
           - master
     env:
       DANDI_ALLOW_LOCALHOST_URLS: 1
+      DANDI_TESTS_PULL_DOCKER_COMPOSE: 0
     steps:
       - name: Download Docker image tarball
         uses: actions/download-artifact@v3
