Move python CI dependencies to setup.py and pin them

--- a/tox.ini
+++ b/tox.ini
@@ -7,23 +7,15 @@ envlist =
 
 [testenv:lint]
 skipsdist = true
-skip_install = true
-deps =
-    flake8<6
-    flake8-black >= 0.2.4
-    flake8-bugbear
-    flake8-docstrings
-    flake8-isort
-    flake8-quotes
-    pep8-naming
+extras =
+    lint
 commands =
     flake8 --config=tox.ini {posargs:.}
 
 [testenv:type]
-deps =
-    mypy==0.982
 extras =
     dev
+    type
 commands =
     mypy {posargs:dandiapi/}
 
