Manage pinned setup.py dependencies w/ dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,9 @@ updates:
       include: scope
     labels:
       - internal
+  - package-ecosystem: pip
+    directory: /
+    schedule:
+      interval: "weekly"
+    labels:
+      - internal
