--- a/dev/.env.docker-compose-native
+++ b/dev/.env.docker-compose-native
@@ -4,6 +4,7 @@ DJANGO_CELERY_BROKER_URL=amqp://localhost:5672/
 DJANGO_MINIO_STORAGE_ENDPOINT=localhost:9000
 DJANGO_MINIO_STORAGE_ACCESS_KEY=minioAccessKey
 DJANGO_MINIO_STORAGE_SECRET_KEY=minioSecretKey
+DJANGO_MINIO_STORAGE_MEDIA_URL=http://localhost:9000/django-storage
 DJANGO_STORAGE_BUCKET_NAME=django-storage
 DJANGO_DANDI_DANDISETS_BUCKET_NAME=dandi-dandisets
 DJANGO_DANDI_DANDISETS_EMBARGO_BUCKET_NAME=dandi-embargo-dandisets
