Fix dependabot ignore type

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     labels:
       - internal
     ignore:
-      - update-types: ["patch"]
+      - update-types: ["version-update:semver-patch"]
   - package-ecosystem: pip
     directory: /
     schedule:
@@ -18,4 +18,4 @@ updates:
     labels:
       - internal
     ignore:
-    - update-types: ["patch"]
+      - update-types: ["version-update:semver-patch"]
